<resources>
    <string name="app_name">CurrencyConverter</string>

    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="base_currency">EUR</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="internet_connected">Connected</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="button_clear">Clear</string>
    <string name="button_convert">Convert</string>
    <string name="button_backspace">&lt;</string>
    <string name="write_down_you_amount">Write down you amount</string>
    <string name="_zer0_value">0.0</string>
</resources>